# lavaplayer-jda-nas

./: Dockerfile  Dockerfile.alpine  README-musl.md  README.md  build-musl.sh  build.gradle  jitpack.yml
jda-nas/: build.gradle
udp-queue/: build.gradle
udp-queue-natives/: CMakeLists.txt  Dockerfile  build.gradle
udp-queue-natives/udpqueue/: CMakeLists.txt
udp-queue-natives/udpqueue/linux/: timing.c
